# ruijieclient

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  autogen.sh  build.sh  configure.ac  gtkbuilder.glade  ruijieclient.spec  ruijieclient.spec.in
configer/: Makefile.am  config_cli.c  config_dbus.c  config_ini.c  config_xml.c  configer.c  configer.h
debian/: README.Debian  changelog  control  copyright  rules
outoftime/: Makefile.am  blog.h  codeconv.c  conn_monitor.c  conn_monitor.h  dbus.c  dbus.h  myerr.c  myerr.h  prase.h  ruijieclient.c  ruijieclient.h
packet/: Makefile.am  md5.h  packetsender.c  packetsender.h  ripemd.c  ripemd.h  ruijie.vapi  supplicant.c  supplicant.h  tiger.c  tiger.h  whirlpool.c  whirlpool.h
src/: Makefile.am  blog.c  codeconv.c  codeconv.h  codeconv_gb2312.c  codeconv_gbk.c  config.c  conn_monitor.c  conn_monitor.h  prase.c  ruijieclient.c  ruijieclient.h  sendpacket.c  sendpacket.h
test/: Makefile  config.h  ruijie.conf  ruijie.vapi  supplicant.c  supplicant.h  test.c  test_vapi.c  test_vapi.vala
vala/: Config.vapi  RC_CLI.vala  RC_Config.vala  RC_Connection.vala  RC_Connection_Delect.vala  RC_DBus_Imple.vala  RC_DBus_Interface.vala  RC_GTK.vala  RC_RuijieClient.vala  idea.txt
