SUBDIRS = src
dist_doc_DATA = README

love:
	@ echo ' HI, make love ing ......'
	@ echo '    ***        ***'
	@ echo '  **    **  **    **'
	@ echo ' **       *        **'
	@ echo '  **              **'
	@ echo '   **            **'
	@ echo '     **        **'
	@ echo '        ** **'
	@ echo '          *'
	@ echo Make love complete
	
	